src/components/__deprecated__/profile/raids/raids.module.css
.cards {
    gap: 1em;
    max-width: 100%;

    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
}

.card {
    border: 1px solid rgba(111, 111, 111, 0.229);
    border-radius: 2px;
    flex: 1;
    flex-basis: 0;

    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.card-img-container {
    position: relative;
    display: flex;
    border-bottom: 1px solid rgba(111, 111, 111, 0.229);

    min-height: 180px;
    min-width: 320px;
    max-height: 100%;

    overflow: hidden;
}

.card-img-container img {
    height: 100%;
    max-height: 100%;
    transform: scale(1.15);
    transition: all 0.6s ease-in-out;
}

.card-img-container img:hover {
    transform: scale(1.2);
}

.card-background {
    width: 100%;
    height: auto;
    object-fit: cover;
    opacity: 0.95;
}

.card-top {
    position: absolute;
    width: 100%;
    top: 0;
}

.card-top-right {
    position: absolute;
    right: 0;

    padding: 0.6em;

    cursor: pointer;
}

.visible-on-card-hover {
    opacity: 0;
    transition: opacity 0.2s;
}

@media (max-width: 768px) {
    .visible-on-card-hover {
        opacity: 1;
    }
}

.card:hover .visible-on-card-hover {
    opacity: 1;
}

.clickable-tag {
    cursor: pointer;
    height: 100%;

    color: white;

    background-color: rgba(31, 31, 31, 0.737);
    background-size: 0em;
    border: 0.1px solid rgba(111, 111, 111, 0.229);
    border-radius: 5px;
    padding: 2px 5px;

    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.35em;

    white-space: nowrap;
}

.clickable-tag img {
    width: 15px;
    height: auto;
}

.race-tag {
    position: absolute;
    cursor: pointer;
    height: min-content;

    color: white;

    padding: 0.5em;

    background-color: rgba(161, 105, 0, 0.857);
    background-size: 0em;
    border-bottom-right-radius: 2px;

    white-space: nowrap;
}

.img-overlay-bottom {
    position: absolute;
    bottom: 1em;

    padding: 0 1em;
}

.card-title {
    color: white;
    font-size: x-large;
    font-weight: 800;
    text-transform: uppercase;
    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.6);
}

.card-challenge-tags {
    margin-bottom: 0.4em;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 0.35em;
}

.card-content {
    padding: 0 1.5em;
    background-color: #0000002c;

    height: 100%;
}

.graph-content {
    position: relative;

    display: flex;
    align-items: stretch;
    justify-content: space-between;

    gap: 0.5em;
}

.graph-right {
    flex: 0;
    margin-left: 1em;

    display: flex;
    flex-direction: column;
    justify-content: center;
}

.dots-container {
    flex: 1;
    margin: 1em 0;
    min-width: 200px;
    max-height: 100%;
    overflow-y: hidden;
    overflow-x: auto;
    direction: rtl;
    /* initially set direction to right-to-left */
}

.dots-svg-loading {
    flex: 1;
}

/* width */
.dots-container::-webkit-scrollbar {
    height: 8px;
}

/* Track */
.dots-container::-webkit-scrollbar-track {
    background: #29292930;
    border-radius: 10px;
}

/* Handle */
.dots-container::-webkit-scrollbar-thumb {
    background: rgba(253, 149, 22, 0.895);
    border-radius: 10px;
}

/* Handle on hover */
.dots-container::-webkit-scrollbar-thumb:hover {
    background: rgba(247, 187, 97, 0.895);
}

.dot {
    cursor: pointer;
}

.dot:hover circle {
    r: 8;
}

.dot-tooltip {
    position: absolute;
    transform: translateY(-50%);

    background-color: rgba(0, 0, 0, 0.65);
    color: #fff;
    padding: 5px 5px 5px 5px;
    border-radius: 9px;

    border-style: solid;
    border-width: 1px;

    opacity: 1;
    transition: opacity 0.2s ease-in-out;

    font-size: 0.7rem;
    text-align: center;
    white-space: nowrap;

    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: nowrap;

    user-select: none;
    pointer-events: none;
}

.dot-tooltip:hover {
    display: none;
}

.dot-tooltip-date {
    color: rgb(170, 170, 170);
}

.dot-tooltip hr {
    border-width: 0.1px;
    color: rgba(111, 111, 111, 0.229);
    opacity: 0.4;

    margin: 0.3em 0;
}

.dot-tooltip-tags {
    display: flex;
    flex-direction: column;
}

.timings {
    border-top: 1px solid rgba(111, 111, 111, 0.229);
    padding: 1em;

    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    justify-content: space-around;
    align-items: flex-start;

    text-align: center;
}

.timing {
    display: flex;
    flex-direction: column;

    text-align: center;
}

.timing > p {
    margin: 0.5em 0;
}

.timing a {
    color: #ffc7b4;
}

.timings-number {
    white-space: nowrap;
    font-weight: 800;
}

.timings-number-large {
    font-weight: 800;
    font-size: 1.625rem;
}

.timings-subtitle {
    color: rgb(100, 100, 100);
    text-transform: uppercase;
    font-size: 12px;
}

.number-loading {
    border-radius: 5px;
    min-height: 2rem;
    min-width: 100%;
    display: flex;
}

.recent {
    --min-size: 250px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(var(--min-size), 1fr));

    gap: 1em;
}

@media only screen and (orientation: portrait) {
    .recent {
        --min-size: 180px;
    }
}
.placeholder {
    flex: 1;
    aspect-ratio: 16 / 9;
    border: 1px solid rgba(111, 111, 111, 0.229);
    border-radius: 12px;
    background-color: #00000053;
}

.activity {
    aspect-ratio: 16 / 9;
    border: 1px solid rgba(111, 111, 111, 0.229);
    border-radius: 12px;

    overflow: hidden;

    position: relative;
}

.activity-content-img {
    width: 100%;
    height: 100%;
    opacity: 0.8;

    border-radius: inherit;
}

.activity-title {
    position: absolute;
    bottom: 15%;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    width: 90%;

    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);

    font-size: 1.2em;
    font-weight: 800;
    text-transform: uppercase;
    color: #ffffff;
}

.success-layer {
    position: absolute;
    bottom: 0;
    width: 100%;

    padding: 0;
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;

    background-image: linear-gradient(#00000000, #000000e2);
}

.success-layer p {
    margin: 0;
    padding: 0.6em 0;
    text-align: center;
    text-transform: uppercase;
    font-size: 15px;
    font-weight: 800;
    letter-spacing: 2px;
}

.load-more {
    transition: transform 0.2s ease-in-out;

    border: 1px solid rgba(111, 111, 111, 0.229);
    border-radius: 12px;
    background-color: #a5f6b455;

    margin: 1em auto;
    flex-basis: 100%;

    display: flex;
    justify-content: center;
}

.load-more:hover {
    cursor: pointer;
    transform: scale(1.05);
}

.load-more > span {
    padding: 1em 3em;
    color: #f0f1f0;
    text-align: center;
    text-transform: uppercase;
    font-size: 15px;
    font-weight: 800;
}

.hover-date {
    opacity: 0;
    position: absolute;
    width: 100%;

    text-align: center;
    padding-top: 0.2em;
    color: #9e9e9e;
    background: linear-gradient(
        0deg,
        rgba(255, 255, 255, 0) 0%,
        rgba(0, 0, 0, 0.7) 41%,
        rgba(0, 0, 0, 0.8) 100%
    );
    transition: opacity 0.3s ease;
}

.activity:hover .hover-date {
    opacity: 1;
}

